[tool.poetry]
name = "compiler-design"
version = "0.0.1"
description = "Lexical Analyzer"
authors = ["AMiWR <amiwrpremium@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pyinstaller = "^6.3.0"


[tool.poetry.group.dev.dependencies]
black = "^23.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
